[S14P21B207-99] refactor: SonarQube 코드 스멜 개선 (Stream.toList 적용)